
2006-09-14 David Moore <dcm@acm.org>
    * Added possible fix for runtime capture hangs on PPC Mac OS.

2006-09-24 Damien <ddouxchamps@users.sf.net>
    * Added PHY specs detection (Linux only). Currently this is limited to
      PHY speed, PHY power class and PHY delay.

2006-09-25 Damien <ddouxchamps@users.sf.net>
    * Added pkg-config file (thx to Daniel Drake)

2006-10-03 David Moore <dcm@acm.org>
    * Migrated both Linux and Mac OS capture routines to use the new
      enqueue/dequeue semantics for DMA-based capture.
    * Ported examples to new capture API.
    * Added new example grab_gray_image_dma that demonstrates the new API.
    * Mac OS compile fix suggested by Rudi Leitgeb.
    * Mac OS improved cleanup during capture_stop() suggested by Matt
      Robinson.
    * Added new Linux-only function dc1394_capture_get_dma_fd().
    * Better Linux error checking when /dev/video1394 is not readable.

2006-10-05 David Moore <dcm@acm.org>
    * Fixed Linux compile error

2006-10-07 David Moore <dcm@acm.org>
    * Fixed computation of packets per frame for cameras that do not support
      the PACKET_PER_FRAME register.
	
2006-10-10 Damien <ddouxchamps@users.sf.net>
    * fixed the value returned by dc1394_get_operation_mode (thanks to Georg
      Glock for spotting the bug).

2006-10-16 David Moore <dcm@acm.org>
    * Migrated from CVS to SVN
    * Changed Version_2_0 to the default branch (HEAD)
    * Modified directory structure (libdc1394 -> dc1394)
    * Changed default tarball filename to libdc1394
    * Changed the get_data_depth() functions to compute a guess when the
      register is not available (thanks to AgBr and Daniel Westhoff for
      finding this one).
	
2006-10-10 Damien <ddouxchamps@users.sf.net>
    * added new conversion functions that work on dc1394video_frame_t.

2006-10-20 David Moore <dcm@acm.org>
    * added new example program grab_partial_image_dma
    * converted octlet_t/quadlet_t/nodeid_t to uint64_t/uint32_t/uint16_t